
= CSS =
* Added post coda post format classes
* Added `dashicons` dependency to main `Opus-Primus` stylesheet
* Change to only append to the `cite` tag when it is inside the `blockquote` tag
* Center align Calendar Day table header cells
* Fixed really long Post Titles and Words not wrapping as expected
* General clean-up and removal of excess/over-writing properties
* Re-Adjust `ul.nav-menu` and `.nav-menu` to `z-index: 3` for main menu
* Reduced the citation font-size for better aesthetics

= JavaScript =
* Re-format code structures
* Removed `table-stripe` class from specific Calendar elements

= Miscellaneous =
* Updated tags used in `style.css` header block to include responsive-layout and fluid-layout
* Updated `readme.txt` to note existence and location of `changelog.txt`
* Updated `readme.txt` copyright notice to clarify copyright years used by individual files.
* Updated Required WordPress version to 3.8 for `dashicons` dependency

/** ------------------------------------------------------------------------- */
== Version 1.2.2 ==
* Released October 2013

= Code =
* Added conditional test rather than print both breadcrumbs (one empty)
* Additional i18n code corrections and enhancements
* Corrected i18n code for EXIF data
* Extracted $post_title management from `post_breadcrumb` method into the `breadcrumb_post_title` method
* Fixed issue with Gallery Post-Format being used when the `gallery` shortcode is not used.
* Fixed undefined offset when there is no image found in post
* Reformatted to be closer to (modified) WordPress Coding Standards - see https://gist.github.com/Cais/8023722

= CSS =
* Reduced all menu related elements with `z-index` property to a value of 1
* Removed `z-index` property from breadcrumb related elements
* Set the breadcrumbs background color to `#ffffff` (white)

= Miscellaneous
* Add documentation to the `first_linked_image` function
* Removed `table-stripe` class from Post-Format: Image tables